--- a/fa2025/lectures/lecture-03.qmd
+++ b/fa2025/lectures/lecture-03.qmd
@@ -1,8 +1,46 @@
 ---
 date: '2025-08-27'
-discussion-items: []
+discussion-items:
+- options: target="_blank"
+  post_text: '- start 8/27, WED'
+  topic: Discussion 1 - ER models
+  url: https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241106
+- options: target="_blank"
+  post_text: '- Practice with Quarto (due Sun)'
+  topic: Homework 1 - DE Tool Review
+  url: https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241133
+- options: target="_blank"
+  post_text: '- (Due Next Thu)'
+  topic: Quiz 1 - ER Models
+  url: https://virginiacommonwealth.instructure.com/courses/122236/quizzes/232168
+- options: target="_blank"
+  post_text: '- Lecture notes and study guide.'
+  topic: Study Guide
+  url: https://lowkeylabs.github.io/cmsc408-course-admin/guide/er-models/
+- options: target="_blank"
+  post_text: '- start 8/25, MON'
+  topic: Practice Quiz 1 - Entity-relation models
+  url: https://virginiacommonwealth.instructure.com/courses/122236/quizzes/232173
 lecture-id: 3
-lecture-topics: []
+lecture-topics:
+- id: '19'
+  topic: Practice 1 Quiz Walkthrough
+  url: _practice-quiz-1-walkthrough-fa2025.qmd
+- id: '20'
+  topic: Homework 1 - DE Tool Review
+  url: _homework-1-fall-2025.qmd
+- id: '21'
+  topic: ER Diagramming
+  url: _er-diagramming.qmd
+- id: '22'
+  topic: Weak and Strong Entities
+  url: _weak-and-strong-entities.qmd
+- id: '23'
+  topic: Study Guide - ER Models
+  url: _er-models-study-guide.qmd
+- id: '24'
+  topic: ER Diagramming Resources
+  url: _er-diagramming-resources.qmd
 title: 'Entity-relation models '
 ---
 
@@ -16,6 +54,29 @@ this_file = 'lecture-03.qmd'
 
 <!-- lecture-block-begin -->
 
+# Practice 1 Quiz Walkthrough
+
+{{< include ../../topics/_practice-quiz-1-walkthrough-fa2025.qmd >}}
+
+# Homework 1 - DE Tool Review
+
+{{< include ../../topics/_homework-1-fall-2025.qmd >}}
+
+# ER Diagramming
+
+{{< include ../../topics/_er-diagramming.qmd >}}
+
+# Weak and Strong Entities
+
+{{< include ../../topics/_weak-and-strong-entities.qmd >}}
+
+# Study Guide - ER Models
+
+{{< include ../../topics/_er-models-study-guide.qmd >}}
+
+# ER Diagramming Resources
+
+{{< include ../../topics/_er-diagramming-resources.qmd >}}
 <!-- lecture-block-end -->
 
 
