--- a/fa2025/details/week-3-details.qmd
+++ b/fa2025/details/week-3-details.qmd
@@ -10,7 +10,7 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 
 # Uncomment as necessary.  These take time to load so only use what you need.
 
-#pages = config.get_pages()
+pages = config.get_pages()
 #quizzes = config.get_quizzes()
 #assignments = config.get_assignment_groups(include=['assignments']) # from Canvas
 #files = config.get_files()
@@ -27,14 +27,12 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 
 ```
 
-<p class="lead">Welcome to a new week!</p>
-*Details will be updated closer to the week.*
+#### Entities and more
 
-<!-- overview-block-begin -->
+This week starts out in a great way - Holiday on Monday!  We will only be meeting once, on Wednesday for lecture 4.  This week we dive head-long into the details of database design.
 
-<p class="lead">Entity-relation models are used to describe databases. Let's explore!</p>
-    
-<!-- overview-block-end -->
+Remember - all homeworks (and quizzes) are accepted late.  See how I can [SAVE YOU HOURS&trade;](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-save-you-hours)
+
 
 
 <!-- deliverables-block-begin -->
@@ -49,6 +47,30 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 <!-- deliverables-block-end -->
 
 <!-- resources-block-begin -->
+#### Notes on the Resources
+
+Review ALL the resources above. Here are some additional notes:
+    
+[Quarto diagramming](https://quarto.org/docs/authoring/diagrams.html) Follow this quick link directly into the quarto documentation.
+
+
+[Quarto tools](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-quarto-tools) A curated set of resources about quarto
+
+
+[Database design](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-database-design) A curated set of videos describing database design and offering examples to help get you started.  ER modeling is only one step of the larger process.
+
+
+[ER Modeling](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-er-modeling) A curated set of videos providing greater detail on difference aspects of ER modeling, including entities, attributes, relationships, cardinality and participation.
+
+
+[WSL Tools](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-wsl-tools) Windows Subsystem for Linux (WSL) is a great tool to learn.  You get all the features of a linux system, without having to give up all the Windows tools, utilities, and of course ... games!
+
+
+[GIT Tools](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-git-tools) Learning GIT and GITHUB is really, really important to your success in this class.  I assembled these videos to help you get started.
+
+
+[Practice Quiz 1](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241146) You can take the practice quiz as many times as you like.  The real quiz will be exactly the same, except you'll need the lockdown browser.
+
 <!-- resources-block-end -->
 
 
