--- a/fa2025/details/week-4-details.qmd
+++ b/fa2025/details/week-4-details.qmd
@@ -27,21 +27,17 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 
 ```
 
-<p class="lead">Welcome to a new week!</p>
-*Details will be updated closer to the week.*
-
-<!-- overview-block-begin -->
-
-<p class="lead">How do we represent entities and relations on the computer?  By using the relational model!</p>
-    
-<!-- overview-block-end -->
+This week we transition from ER models, finishing up with homework 3 to relational models and relational algebra.
 
 
 <!-- deliverables-block-begin -->
 #### Things to do this week
 
 
-[Discussion 2 - Relational Alg.](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241109) Relational Alg.
+[Discussion 2 - CANCELLED](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1289931) This discussion has been cancelled.
+
+
+[Homework 3 - Modeling Your World](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241135) more database specificiation practice.
 
 
 [Practice Quiz 2 - Relational Algebra](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241147) focuses on relational modeling and relational algebra.
@@ -49,6 +45,21 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 <!-- deliverables-block-end -->
 
 <!-- resources-block-begin -->
+#### Notes on the Resources
+
+Review ALL the resources above. Here are some additional notes:
+    
+[Relational data model](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-4-relational-data-model) A brief introduction to the relational model.
+
+
+[Example translation](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-4-example-translation) A worked example converting an ER diagram to a relational schema.
+
+
+[Relational DB intro](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-4-relational-db-intro) From IBM Cloud, this video provides an introduction to relational databases.
+
+
+[Keys and more keys](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-4-keys-and-more-keys) Another video from Decomplexify - laying out different key types!
+
 <!-- resources-block-end -->
 
 
