--- a/fa2025/details/week-5-details.qmd
+++ b/fa2025/details/week-5-details.qmd
@@ -27,8 +27,11 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 
 ```
 
-<p class="lead">Welcome to a new week!</p>
-*Details will be updated closer to the week.*
+<p class="lead">Week 5 - more on relational algebra</p>
+
+The relational model gives a way to store data - tables, rows, keys, and all that.  So - what do we do with all that stuff?  
+
+Relational algebra gives the tools to describe on paper and implement in the computer operations that manipulate our relations, that is, our tables and rows.
 
 <!-- overview-block-begin -->
 
@@ -41,14 +44,26 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 #### Things to do this week
 
 
-[Homework 3 - Modeling Your World](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241135) more database specificiation practice.
-
-
 [Quiz 2 - Relational Algebra - Requires Respondus LockDown Browser + Webcam](https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241122) focuses on relational modeling and relational algebra.
 
 <!-- deliverables-block-end -->
 
 <!-- resources-block-begin -->
+#### Notes on the Resources
+
+Review ALL the resources above. Here are some additional notes:
+    
+[Relational data model](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-5-relational-data-model) A brief introduction to the relational model.
+
+
+[Example translation](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-5-example-translation) A worked example converting an ER diagram to a relational schema.
+
+
+[Relational DB intro](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-5-relational-db-intro) From IBM Cloud, this video provides an introduction to relational databases.
+
+
+[Keys and more keys](https://virginiacommonwealth.instructure.com/courses/122236/pages/resource-week-5-keys-and-more-keys) Another video from Decomplexify - laying out different key types!
+
 <!-- resources-block-end -->
 
 
