--- a/fa2025/lectures/lecture-07.qmd
+++ b/fa2025/lectures/lecture-07.qmd
@@ -1,8 +1,40 @@
 ---
 date: '2025-09-15'
-discussion-items: []
+discussion-items:
+- options: .
+  post_text: .
+  topic: Progress reports
+  url: ''
+- options: target="_blank"
+  post_text: '- due 9/15 (today)'
+  topic: Practice Quiz 2 - Relational Algebra
+  url: https://virginiacommonwealth.instructure.com/courses/122236/quizzes/232174
+- options: target="_blank"
+  post_text: '- due 9/15 (today)'
+  topic: HW3 - resubmits, README and other stuff
+  url: https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241135
+- options: target="_blank"
+  post_text: ''
+  topic: HW3 - not good, what to look for ...
+  url: https://virginiacommonwealth.instructure.com/courses/122236/gradebook/speed_grader?assignment_id=1241134&student_id=135527
+- options: target="_blank"
+  post_text: '- due 9/15 (today)'
+  topic: Quiz 2 - Relational Algebra
+  url: https://virginiacommonwealth.instructure.com/courses/122236/quizzes/232169
 lecture-id: 7
-lecture-topics: []
+lecture-topics:
+- id: '61'
+  topic: Query Languages
+  url: _query-languages.qmd
+- id: '62'
+  topic: Relational Algebra
+  url: _relational-algebra.qmd
+- id: '63'
+  topic: Basic Operations
+  url: _basic-operations.qmd
+- id: '64'
+  topic: Set Operations
+  url: _set-operations.qmd
 title: Relational models 3
 ---
 
@@ -16,6 +48,21 @@ this_file = 'lecture-07.qmd'
 
 <!-- lecture-block-begin -->
 
+# Query Languages
+
+{{< include ../../topics/_query-languages.qmd >}}
+
+# Relational Algebra
+
+{{< include ../../topics/_relational-algebra.qmd >}}
+
+# Basic Operations
+
+{{< include ../../topics/_basic-operations.qmd >}}
+
+# Set Operations
+
+{{< include ../../topics/_set-operations.qmd >}}
 <!-- lecture-block-end -->
 
 
