--- a/fa2025/lectures/lecture-07.qmd
+++ b/fa2025/lectures/lecture-07.qmd
@@ -35,7 +35,7 @@ lecture-topics:
 - id: '64'
   topic: Set Operations
   url: _set-operations.qmd
-title: Relational models 3
+title: Relational Algebra 1
 ---
 
 ```{python}
