--- a/fa2025/lectures/lecture-11.qmd
+++ b/fa2025/lectures/lecture-11.qmd
@@ -1,9 +1,34 @@
 ---
 date: '2025-09-29'
-discussion-items: []
+discussion-items:
+- options: target="_blank"
+  post_text: '- due 10/5, SUN'
+  topic: Homework 4 - Normal Forms
+  url: https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241136
+- options: target="_blank"
+  post_text: '- due 9/28, SUN'
+  topic: Discussion 3 - Normal forms
+  url: https://virginiacommonwealth.instructure.com/courses/122236/assignments/1241112
+- options: target="_blank"
+  post_text: '- Quiz due 9/29, MON'
+  topic: Practice Quiz 3 - Analysis and Normal Forms
+  url: https://virginiacommonwealth.instructure.com/courses/122236/quizzes/232175
+- options: target="_blank"
+  post_text: ''
+  topic: Resources on the Canvas homepage.
+  url: https://virginiacommonwealth.instructure.com/courses/122236
 lecture-id: 11
-lecture-topics: []
-title: Analysis and Normal Forms 2
+lecture-topics:
+- id: '88'
+  topic: Practice Quiz 3 - Analysis and Normal Forms
+  url: _practice-quiz-3-analysis-and-normal-forms-fa2025.qmd
+- id: '89'
+  topic: Homework 4 - Analysis and Normal Forms
+  url: _homework-4-analysis-and-normal-forms-fa2025.qmd
+- id: '90'
+  topic: Normalization Example
+  url: _normalization-example-1.qmd
+title: Analysis and Normal Forms 3
 ---
 
 ```{python}
@@ -16,6 +41,17 @@ this_file = 'lecture-11.qmd'
 
 <!-- lecture-block-begin -->
 
+# Practice Quiz 3 - Analysis and Normal Forms
+
+{{< include ../../topics/_practice-quiz-3-analysis-and-normal-forms-fa2025.qmd >}}
+
+# Homework 4 - Analysis and Normal Forms
+
+{{< include ../../topics/_homework-4-analysis-and-normal-forms-fa2025.qmd >}}
+
+# Normalization Example
+
+{{< include ../../topics/_normalization-example-1.qmd >}}
 <!-- lecture-block-end -->
 
 
